# penin-monorepo

./: .dockerignore  .flake8  .gitattributes  .gitignore  .penin-sync-config.json  Dockerfile  OPTIMIZATION_REPORT.md  README.md  docker-compose.yml  optimize-sync.py  pyproject.toml  requirements.txt  setup.py
SYSTEM/etc/: bash.bashrc  group  passwd-  sysctl.conf
SYSTEM/etc/cron.daily/: lemni-artifacts-clean
SYSTEM/etc/default/: et-autonomy  penin-agent
SYSTEM/etc/et/: watchdog.env
SYSTEM/etc/iptables/: rules.v4
SYSTEM/etc/logrotate.d/: lemni-ledger  penin-worm
SYSTEM/etc/nginx/: geo_protection.conf
SYSTEM/etc/nginx/conf.d/: logfmt.conf
SYSTEM/etc/nvidia-container-runtime/: config.toml
SYSTEM/etc/ssh/: ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub
SYSTEM/etc/sudoers.d/: 90-et  falcon-autonomy  falcon-q
SYSTEM/etc/sysctl.d/: 98-et-ultimate.conf  99-llama.conf
SYSTEM/etc/systemd/system/: copilot-immune-healing.service  darwin-birthd.timer  et-executor.service  eternity.service  geo-protection.service  ia3-neurogenesis.service  litellm-gpt5.service  local-falcon.service  penin-behavior-harness.service  snap-core18-2952.mount  snap-cups-1100.mount  teis-rollback-webhook.service
SYSTEM/etc/systemd/system/multi-user.target.wants/: arquiteto-silencioso-v10.service  copilot-immune-healing.service  ia3-system.service  interface-consciencia.service  neural_genesis.service  penin-sync.service  penin-turbo-mirror.service  runpod-vllm-tunnel.service  snap-core18-2952.mount  snap-cups-1100.mount
SYSTEM/etc/systemd/system/snapd.mounts.target.wants/: snap-core24-1151.mount
SYSTEM/etc/ufw/: user6.rules.20250916_195105
SYSTEM/opt/et/: et_core.py
SYSTEM/opt/et_backup_20250812_063154/knowledge_base.d/: 30_guardrails.md
SYSTEM/opt/et_fusion/: train_falcon_cpu.py
SYSTEM/opt/et_fusion/data/: distill_1755374376.json  distill_1755385320.json  distill_1755385527.json  distill_1755395949.json  distill_1755396179.json  distill_1755436130.json  distill_1755438289.json  distill_1755439231.json
SYSTEM/opt/et_fusion/data/index/: metas.json
SYSTEM/opt/et_fusion/data/lemniscata_corpus_txt/: Comprovando a _Margem Infinita_ e Melhorias Propostas na Lemniscata.txt  Lemniscata de Penin_ Equação P = ∞(E + N − iN).txt  Margem Infinita de Evolução da Lemniscata de Penin (Reavaliação com Nova Visão).txt  Relatório Técnico_ Lemniscata de Penin – Sucessora da Equação de Turing Ω (ETΩ).txt
SYSTEM/opt/et_fusion/router/: ensemble_router.py.bak.1755394848  ensemble_router.py.scorebak.1755394854
SYSTEM/opt/et_replica1/: manager.py  policy.yaml
SYSTEM/opt/et_replica1/actions/: executor.py  queue.jsonl
SYSTEM/opt/et_replica1/agents/: et_evolver.py.bak.2025-08-12-164415
SYSTEM/opt/et_replica1/autonomy/: et_autonomy.py
SYSTEM/opt/et_replica1/data/index/: index.faiss
SYSTEM/opt/et_replica1/equation/: ET_state.md
SYSTEM/opt/et_replica1/equation/etomega/: __init__.py
SYSTEM/opt/et_replica1/index/: etomega_meta.json
SYSTEM/opt/et_replica1/rag/: ingest_etomega.py
SYSTEM/opt/et_replica1/workspace/ETOmega/: config.yaml  log.txt
SYSTEM/opt/et_ultimate.FROZEN/: .env  config.json  et_ultimate_manager.py.bak.2025-08-12-133858  et_ultimate_manager.py.bak.2025-08-12-135115
SYSTEM/opt/et_ultimate.FROZEN/actions/: executor.py
SYSTEM/opt/et_ultimate.FROZEN/agents/: et_evolver.py  et_evolver.py.bak  et_evolver.py.bak.2025-08-12-164449  et_evolver.py.bak.2025-08-12-164936
SYSTEM/opt/et_ultimate.FROZEN/agents/brain/: et_consciencia_emergente.py  et_ensemble_fusion.py  et_fusao_total_inteligencias.py  et_mutation_orchestrator.py  et_natural2code.py  et_orquestrador_quantico.py  et_projecao_cognitiva_possibilidades.py  et_self_reflection.py  et_watchdog.py  mini_task_runner.py
SYSTEM/opt/et_ultimate.FROZEN/agents/interface/: et_chat.py
SYSTEM/opt/et_ultimate.FROZEN/copilotos/: refatorador.json
SYSTEM/opt/et_ultimate.FROZEN/history/: mini_tasks.json  mini_tasks_report.json
SYSTEM/opt/et_ultimate.FROZEN/memory/: etomega_index.faiss
SYSTEM/opt/et_ultimate.FROZEN/rag/: ingest_etomega.py
SYSTEM/opt/et_ultimate.FROZEN/sandbox/: Dockerfile
SYSTEM/opt/et_ultimate.FROZEN/state/: watchdog_heartbeat.json
SYSTEM/opt/et_ultimate.FROZEN/web/: monitor.py
SYSTEM/opt/et_ultimate.FROZEN/workspace/: log.txt
SYSTEM/opt/google/chrome/: chrome_200_percent.pak
SYSTEM/opt/google/chrome/locales/: ar.pak  ca.pak  (+12 more)
SYSTEM/opt/ia3-neurogenesis/config/: ia3_darwin.yaml
SYSTEM/opt/ia3-neurogenesis/hooks/: 50-neurogenesis-rollback.sh
SYSTEM/opt/ia3-neurogenesis/neurogenesis/: worm.py
SYSTEM/opt/ia3/dashboards/: ia3_dashboard.json
SYSTEM/opt/ia3/logs/: evolution_report_1758504657.json
SYSTEM/opt/llm_base/falcon-mamba-7b/: README.md  config.json  tokenizer_config.json
SYSTEM/opt/penin-autosync/: run.sh  start_sync.py
SYSTEM/opt/penin-autosync/docs/: master_readme_template.md.j2
SYSTEM/opt/penin-autosync/tools/: agent_controller.py  auto_sync.py  bidirectional_sync.py
SYSTEM/usr_local_bin/: accelerate  accelerate-config  accelerate-estimate-memory  accelerate-launch  accelerate-merge-weights  activate-global-python-argcomplete  agi  agi_fusion  alembic  aws_completer  backend-test-tools  bandit  bandit-baseline  bandit-config-generator  black  blackd  burr-admin-build-ui  burr-admin-generate-demo-data  burr-admin-publish  burr-admin-server  burr-demo  burr-test-case  cbor2  celery  check-model  check-node  chroma  coloredlogs  completion-ghapi  composio  cpuinfo  csv2rdf  csvw2datasette  csvw2json  csvw2markdown  csvw2sqlite  csvwdescribe  csvwvalidate  darwin_ia3_gateway.py  darwin_kill_agent.py  (+264 more)
config/: config_manager.py  system_config.yaml
ml/: README.md
ml/models/: neural_language_model.py
opt/et_ultimate/agents/brain/: demo.py  neural_core.py  test_neural_core.py
opt/et_ultimate/equation/: ET_state.md
penin/: __init__.py  __version__.py
penin/api/: server.py
penin/logging/: logger.py
penin_omega/: README.md  evolution_engine.py
penin_system/: mega_deploy.py
projetos/: README.md
tests/: conftest.py  test_api.py  test_neural_core.py
(+1567 files in other folders)
